# ProgPrac2

./: CMakeLists.txt
Headers/Include/: Comodi.h  Contenidor.h  Element.h  Lletra.h  Seleccio.h
Source/: main.cpp
Source/src/: Comodi.cpp  Contenidor.cpp  Element.cpp  Lletra.cpp  Seleccio.cpp
